<resources>
    <string name="app_name" translatable="false">DressMeUpApp</string>
    <string name="welcome_app">Welcome to the DressMeUp!</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="signup_info_success">Success</string>
    <string name="signup_info_failure">Failure</string>
    <string name="signup_info_failure_email_details">"This email is already in use."</string>
    <string name="signup_info_failure_details">"Registration failed. Please try again."</string>
    <string name="signup_info_success_details">"Registration successful!"</string>
    <string name="login_failure">Login failed. Check your internet connection or password and login.</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log out</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="accept">Accept</string>
    <string name="edit_password">Edit password</string>
    <string name="password_change_success">Password change successful!</string>
    <string name="password_change_fail">Password change failed!</string>
    <string name="add_post">Add Post</string>
    <string name="menu_home">Check the outfits</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="post_content">Content</string>
    <string name="current_location">Current Location</string>
    <string name="create_post_failure_details">Something went wrong</string>
    <string name="post_details_title">Post Details</string>
    <string name="add_comment_button">Add comment</string>
    <string name="comments">Comments</string>
</resources>